# CPP_test

./: .clangd  .gitignore  CMakeLists.txt  README.md  Test_01.cpp  main.cpp  sort_array.cpp  split_box.cpp  struct.cpp
1274_store/: main.cpp
2020/grid_2007/: main.cpp
2021/hole/: hole.in  main.cpp  main_ex.cpp
2022/decode/: decode.cpp
2022/expr_5845/: expr.in  main.cpp  main_ex.cpp
2022/point/: main.cpp  main_ex.cpp  point.in
2023/AHOI2023_count/: count.in  main.cpp  main_v2.cpp
2023/AHOI2023_score/: main.cpp  score.in
2023/AHOI2023_stone/: main.cpp  main_v2.cpp  stone.in
2023/bus/: bus.in  main.cpp  main_v2.cpp
2023/uqe/: main.cpp
2024/AHOI2024_b/: b.in  main.cpp  main_ex.cpp
2024/AHOI2024_c/: 3_in.txt  c.in  main.cpp  main_v2.cpp
2024/AHOI2024_d/: d.in  main.cpp
2024/csp_chain/: chain  main.cpp  main_ex.cpp  main_ex2.cpp  main_ex3.cpp
2024/dec/: dec.in  main.cpp  main_ex.cpp
2024/hire/: hire.in  main.cpp
2024/move/: main.cpp  main_v2.cpp  move.in
2024/sticks/: main.cpp  main_ex.cpp  main_ex2.cpp  sticks.in
2025/A1349_xor/: input.in  main.cpp  main_ex.cpp
2025/A1350_polygon/: input_10.in  input_big.in  main.cpp  main_10.cpp  main_100.cpp  main_new.cpp  polygon.in  test.cpp
exp_3592/: main.cpp
expr_5845/: main.cpp
input_data/: number.in
others/1274_store/: main.cpp  main_ex.cpp
others/3592_exp/: input.in
others/zy_6687/: input.in  main.cpp  main_v2.cpp  main_v3.cpp
others/zy_6688/: input.in  main_v2.cpp
others/zy_6695/: input.in  main.cpp  (+2 more)
road/: main.cpp
test/: struct.cpp  test1.cpp  test_02.cpp  top_n_index.cpp
